<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2w_teleop_gamepad</name>
  <version>0.1.0</version>
  <description>Gamepad teleoperation node for Unitree GO2-W using Logitech F710 or any standard gamepad.</description>
  <maintainer email="tanaka.koki.t6r@research.f-rei.go.jp">Koki Tanaka</maintainer>
  <license>BSD-3-Clause</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>unitree_api</depend>

  <exec_depend>joy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
